remove all crossword coding

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </div>
             </section>
             <!-- crossword -->
-            <div class="crossword-container">
+            <div class="crossword-container" id="crossword-body">
                 <h1 id="crossword-title"><em>Oh no Lola Crossword Puzzle</em></h1>
 
                 <div class="lola-crossword" id="lola-crossword">
