add games page and contact page

--- a/games.html
+++ b/games.html
@@ -34,9 +34,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="">Home</a></li>
-                <li><a href=""class="active">Games (coming soon)</a></li>
-                <li><a href="">Contact us!</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="games.html" class="active">Games (coming soon)</a></li>
+                <li><a href="contact.html">Contact us!</a>
                 <li>
             </ul>
         </nav>
@@ -44,7 +44,8 @@
 
     <!-- main content -->
     <main>
-        
+        <div>game one</div>
+        <div>game two</div>
     </main>
 
     <!-- footer -->
