correct errors on home page w3c validator testing

--- a/games.html
+++ b/games.html
@@ -24,10 +24,10 @@
 
 <body>
     <!-- header -->
-    <header id="site-header" class="header-footer-group" role="banner">
+    <header id="site-header" class="header-footer-group">
         <div>
             <a href="index.html">
-                <img src="assets/images/logo.webp" height="50px" width="80px" alt="oh no Lola">
+                <img src="assets/images/logo.webp" height= 50px width=80px alt="oh no Lola">
             </a>
         </div>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
