--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
     <!-- header -->
-    <header id="site-header" class="header-footer-group" role="banner">
+    <header id="site-header" class="header-footer-group">
         <div>
             <a href="index.html">
-                <img src="assets/images/logo.webp" height="50px" width="80px" alt="oh no Lola">
+                <img src="assets/images/logo.webp" id="logo" alt="oh no Lola">
             </a>
         </div>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -44,14 +44,17 @@
 
     <!-- main content -->
     <main>
-        <section id="hero">
-            <h1><em>Join me on my way to school.</em></h1>
-            <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
+        <section>
+            <div id="hero">
+                <h1><em>Join me on my way to school.</em></h1>
+                <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
+            </div>
         </section>
 
-        <section id="intro">
-            <h2 style="color: white; text-align: center;">Oh no</h2>
-            <h1><em>Lola</em></h1>
+        <section>
+            <div id="intro">
+            <h1 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h1>
+        </div>
         </section>
 
         <section>
@@ -336,14 +339,14 @@
                 <div class="con-container text-center">
                     <div class="col align-self-end">
                         <div class=" row vertical-center">
-                            <button id="con-button" role="button" class="btn btn-warning btn-lg">*click me* Let’s
-                                celebrate!! *click me*</button> <canvas id="confetti"></canvas>
+                            <button id="con-button" role="button" class="btn btn-warning btn-lg">*click me* <br> Let’s
+                                celebrate!! <br> *click me*</button> <canvas id="confetti"></canvas>
 
                         </div>
                     </div>
                 </div>
             </section>
-            
+
     </main>
 
     <!-- footer -->
