remove games and contact pages, error as they fo not load, remove games link from header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="">Games (coming soon)</a></li>
                 <li><a href="">Contact us!</a>
                 <li>
             </ul>
@@ -46,22 +45,22 @@
     <main>
         <section>
             <div id="hero">
-                <h1><em>Join me on my way to school.</em></h1>
+                <h1> <em>Join me on my way to school.</em> </h1>
                 <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
             </div>
         </section>
 
         <section>
             <div id="intro">
-            <h1 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h1>
+            <h2 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h2>
         </div>
         </section>
 
         <section>
             <div id="welcome-message">
-                <p>Welcome to the Reading Adventure Zone!
+                <h2>Welcome to the Reading Adventure Zone!</h2>
 
-                    Hey there, young reader! Get ready to dive into fun stories full of exciting adventures, lovable
+                <p> Hey there, young reader! Get ready to dive into fun stories full of exciting adventures, lovable
                     characters, and important lessons. Whether you're reading all on your own or with a grown-up, our
                     stories will take you on journeys that will help you learn new words, improve your reading skills,
                     and
@@ -324,7 +323,7 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="col align-self-center">
-                            <h1>You finished the story, good job!</h1>
+                            <h2>You finished the story, good job!</h2>
                         </div>
                     </div>
                 </div>
@@ -339,7 +338,7 @@
                 <div class="con-container text-center">
                     <div class="col align-self-end">
                         <div class=" row vertical-center">
-                            <button id="con-button" role="button" class="btn btn-warning btn-lg">*click me* <br> Let’s
+                            <button id="con-button" class="btn btn-warning btn-lg">*click me* <br> Let’s
                                 celebrate!! <br> *click me*</button> <canvas id="confetti"></canvas>
 
                         </div>
