create subsections for english and math and new home page

--- a/index.html
+++ b/index.html
@@ -43,308 +43,58 @@
 
     <!-- main content -->
     <main>
+        <div id="hero-main">
+                <h1 id="hero-main-covertext">Welcome to Bright Minds Academy!</h1>
+        </div>
+
         <section>
-            <div id="hero">
-                <h1> <em>Join me on my way to school.</em> </h1>
-                <h2 style="color: white; text-align: center;">Adventure awaits!</h2>
+            <div class="container text-center">
+                <div class="row row-cols-2">
+                    <div class="col-6-auto">
+                        <div class="card">
+                            <h5 class="card-header">English Reading</h5>
+                            <div class="card-body-main">
+                                <h5 class="card-title">Oh no Lola</h5>
+                                <a href="english.html" class="btn btn-primary">Join Lola</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6-auto">
+                        <div class="card">
+                            <h5 class="card-header">Math Games</h5>
+                            <div class="card-body-main">
+                                <h5 class="card-title">Magical Maths</h5>
+                                <a href="math.html" class="btn btn-primary">Let’s Play</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section>
-            <div id="intro">
-            <h2 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h2>
-        </div>
-        </section>
-
-        <section>
             <div id="welcome-message">
-                <h2>Welcome to the Reading Adventure Zone!</h2>
-
-                <p> Hey there, young reader! Get ready to dive into fun stories full of exciting adventures, lovable
-                    characters, and important lessons. Whether you're reading all on your own or with a grown-up, our
-                    stories will take you on journeys that will help you learn new words, improve your reading skills,
+                <p>At Bright Minds Academy, we believe that every child is a star waiting to shine! Our interactive
+                    website is designed to help young learners improve their reading and math skills in an exciting
                     and
-                    discover the magic of books!
+                    playful way. Through engaging games, colorful activities, and stories that spark the
+                    imagination,
+                    your child will build confidence while having fun.
 
-                    Today, we’ll meet Lola the Duckling, a kind and brave little bird who is setting off on her first
-                    day of
-                    school. Along the way, Lola learns about kindness, helping others, and facing her fears. What do you
-                    think Lola will discover next? Join us as we read and explore together!
+                    Whether it’s solving math puzzles, exploring the world of letters and words, or tackling fun
+                    challenges, Bright Minds Academy turns learning into a magical journey. With tools tailored to
+                    different skill levels and progress tracking to celebrate every milestone, kids can grow at
+                    their
+                    own pace in a supportive and encouraging environment.
 
-                    Grab your favorite snack, get comfy, and let’s begin our reading adventure!
+                    So, grab your thinking cap, and let’s unlock the door to endless possibilities together!
 
+                    Start your learning adventure today!
                 </p>
             </div>
         </section>
 
 
-        <!-- start of story -->
-        <h1>Once upon a time,</h1>
-        <p>In a peaceful pond nestled in the heart of a magical forest, there lived a fluffy duckling named Lola. She
-            was kind, curious, and always eager to help others. Today was a big day—her first day of school! But to get
-            there, Lola had to walk through the forest alone for the very first time.
-
-            With a deep breath and a little quack of determination, Lola waddled into the forest. The sunlight filtered
-            through the tall trees, and birds sang happy songs. Lola smiled but kept her little wings close to her
-            sides. She wasn’t just excited—she was nervous.
-
-            <!-- start of storyline -->
-
-            <section>
-                <div class="col align-self-center">
-                    <div class="card">
-                        <img src="assets/images/lola-porkie.webp" class="card-img-top"
-                            alt="duckling and a porcupine in the forest">
-                        <div class="card-body">
-                            <h2 class="card-title">Oh, where could it be?</h2>
-                            <p class="card-text">As she waddled along, she heard a frustrated voice behind a bush.
-
-                                “Oh, where could it be? I can’t find it anywhere!”
-
-                                Curious, Lola peeked around the bush and saw a small porcupine pacing in circles. His
-                                quills were sticking out in all directions.
-
-                                “Hello! I’m Lola,” she said kindly. “Are you okay?”
-
-                                The porcupine sighed. “I’m Percy. I’ve lost my hat! I was wearing it earlier, but now
-                                it’s gone, and I can’t find it!”
-
-                                Lola tilted her head. “When did you last see it?”
-
-                                Percy scratched his head with a quill. “Um… I don’t know. I was walking and looking at
-                                flowers, and then it was gone!”
-
-                                Lola thought for a moment. She noticed how flustered Percy looked. “Let’s slow down and
-                                check carefully,” she said.
-
-                                Percy nodded, though he kept pacing.
-
-                                “Stop moving for a second, Percy,” Lola said gently. As Percy stood still, Lola waddled
-                                closer and gasped.
-
-                                “Percy, your hat is stuck in your quills! It’s been with you this whole time!”
-
-                                Percy’s eyes widened as Lola carefully tugged the hat free. “Oh my quills!” he
-                                exclaimed. “How did I not notice?”
-
-                                Lola giggled. “Sometimes, we get so worried that we forget to stop and look carefully.
-                                If we’re patient, the answer can be right in front of us.”
-
-                                Percy nodded, blushing. “You’re right, Lola. I need to be more patient. Thank you for
-                                helping me!”
-
-                                “You’re welcome, Percy. Enjoy your walk!”
-
-                                Percy waved goodbye, and Lola continued through the forest, feeling happy that she could
-                                help.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="quiz-section" id="quiz1">
-                    <h2>Quiz: Patience with Percy</h2>
-                    <p>What was Percy’s problem?</p>
-                    <label><input type="radio" name="quiz1" value="1"> He lost his way in the forest.</label>
-                    <label><input type="radio" name="quiz1" value="2"> He lost his hat.</label>
-                    <label><input type="radio" name="quiz1" value="3"> He was hungry.</label>
-                    <button onclick="checkAnswer('quiz1', 2)">Submit</button>
-                    <p class="result" id="result1"></p>
-                </div>
-
-                <div class="col align-self-center">
-                    <div class="card">
-                        <img src="assets/images/butter-worm.webp" class="card-img-top"
-                            alt="sad green worm on a red mushroom">
-                        <div class="card-body">
-                            <h2 class="card-title">Can Butter fly!</h2>
-                            <p class="card-text">As she waddled deeper into the forest, Lola spotted a tiny green worm
-                                crying on top of a red mushroom.
-
-                                “Hey there, my name is Lola! What’s wrong?” Lola asked, waddling closer.
-
-                                The worm sniffled. “Oh no Lola, I’m Butter and I am terribly sad. I just want to go to
-                                normal school, make friends, play and learn. My parents are making me go to flying
-                                school. I don’t want to go to flying school! I’m just a worm!
-                                How can I possibly fly when I don’t even have wings?”
-
-                                Lola smiled warmly. “Oh Butter, did anyone tell you that one day you’ll be a butterfly?”
-
-                                Butter blinked. “A… butterfly? Me?”
-
-                                Lola nodded. “Yes! One day, you’ll have big, beautiful wings, and you’ll fly all over
-                                the place.”
-
-                                Butter looked down at her little worm body. “But I don’t have wings now. What if I never
-                                get them?”
-
-                                Lola chuckled. “Wings take time to grow, Butter. But just because you don’t see them now
-                                doesn’t mean they’re not coming. Hope is believing in what’s possible, even when you
-                                can’t see it yet.”
-
-                                Butter sniffled but smiled. “So… I just have to wait and trust that I’ll be a butterfly
-                                one day?”
-
-                                “That’s right,” Lola said. “And when the time comes, your wings will be amazing!”
-
-                                Butter wiggled happily. “Thank you, Lola! I feel much better. I’ll go to flying school
-                                and wait for my wings!”
-
-                                “That’s the spirit!” Lola said, waving goodbye as Butter wriggled off.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="quiz-section" id="quiz2">
-                    <h2>Quiz: Hope with Butter</h2>
-                    <p>What did Lola tell Butter to give her hope?</p>
-                    <label><input type="radio" name="quiz2" value="1"> That she would grow wings someday and become a
-                        butterfly.</label>
-                    <label><input type="radio" name="quiz2" value="2"> That she didn’t need wings to fly.</label>
-                    <label><input type="radio" name="quiz2" value="3"> That she could borrow wings from someone
-                        else.</label>
-                    <button onclick="checkAnswer('quiz2', 1)">Submit</button>
-                    <p class="result" id="result2"></p>
-                </div>
-
-                <div class="col align-self-center">
-                    <div class="card">
-                        <img src="assets/images/foxy-trapped.webp" class="card-img-top"
-                            alt="small fox caught in a snare">
-                        <div class="card-body">
-                            <h2 class="card-title">Be brave</h2>
-                            <p class="card-text">As Lola walked farther, the sunlight began to fade, casting long
-                                shadows across the forest floor. Suddenly, she heard a soft whimper. Curious, she
-                                followed the sound and found a small fox trapped in a rope snare. Its fluffy tail
-                                twitched nervously.
-
-                                “Oh no!” Lola exclaimed, her heart racing. “Are you okay?”
-
-                                The fox looked up with wide, frightened eyes. “Please help me!” it whimpered.
-
-                                Lola hesitated. Her mommy had always warned her to be careful of foxes. “Foxes can be
-                                sneaky and tricky,” her mommy had said. “Sometimes, they might even try to hurt you.”
-
-                                But this fox looked so scared and helpless. Lola’s heart tugged at her.
-
-                                “You’re a fox,” she said cautiously. “How do I know you won’t hurt me if I help you?”
-
-                                The fox’s eyes filled with tears. “I know foxes have a bad reputation, but I promise I
-                                won’t hurt you. I’m just a baby, and I’m really scared!”
-
-                                Lola took a deep breath. “Okay. I’m going to trust you. Stay still while I help you.”
-
-                                Carefully, Lola found a sharp stone nearby and began to cut the rope. It took time, but
-                                finally, the snare loosened, and the fox was free.
-
-                                The fox jumped up, wagging its tail. “Thank you, thank you! You saved me!”
-
-                                “You’re welcome,” Lola said with a smile. “But you need to be more careful. The forest
-                                can be dangerous.”
-
-                                The fox nodded. “I will! I know you were scared to help me, but you trusted me. I’ll
-                                never forget your kindness.”
-
-                                “Well, sometimes it’s okay to trust, even when you’re afraid,” Lola said. “Just be sure
-                                to trust wisely.”
-
-                                The fox beamed. “You’re brave and kind, Lola. Maybe we can be friends?”
-
-                                Lola smiled. “Maybe. Be safe out there!”
-
-                                As Lola continued her journey, she felt proud of all she had learned. Percy taught her
-                                the value of patience, Butter reminded her to always have hope, and the fox showed her
-                                that trust can overcome fear.
-
-                                By the time she reached school, Lola knew she was ready for anything. With kindness,
-                                courage, and a little quack of determination, she waddled into class, excited for the
-                                adventures ahead.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="quiz-section" id="quiz3">
-                    <h2>Quiz: Trust with the Fox</h2>
-                    <p>Why did Lola decide to help the fox?</p>
-                    <label><input type="radio" name="quiz3" value="1"> Because the fox begged her to help.</label>
-                    <label><input type="radio" name="quiz3" value="2"> Because she trusted her instincts and saw that
-                        the fox was helpless.</label>
-                    <label><input type="radio" name="quiz3" value="3"> Because the fox promised her a reward.</label>
-                    <button onclick="checkAnswer('quiz3', 2)">Submit</button>
-                    <p class="result" id="result3"></p>
-                </div>
-
-
-
-
-                <div class="col align-self-center">
-                    <div class="card">
-                        <img src="assets/images/school-owl.jpeg" class="card-img-top"
-                            alt="owl standing infront of school">
-                        <div class="card-body">
-                            <h2 class="card-title">School is cool</h2>
-                            <p class="card-text">
-                                After a wild trek through the forest, Lola finally saw it—a tiny wooden schoolhouse with
-                                flowers everywhere. It looked like something straight out of Duck Pinterest!
-
-                                As she waddled up, she spotted other animals chatting—bunnies, squirrels, and ducklings.
-                                They swapped morning adventures like they’d just come back from summer camp. Lola puffed
-                                out
-                                her feathers. “I walked here alone, helped a porcupine find his hat, a caterpillar
-                                figure
-                                out flying school, and saved a baby fox from a snare!” she quacked.
-
-                                The teacher, a wise old owl with glasses bigger than her head, beamed. “Impressive,
-                                Lola!
-                                You’re already overqualified.”
-
-                                Inside, Lola plopped onto a tiny desk, her feet barely touching the floor. The classroom
-                                was
-                                cozy, with sunbeams, posters, and at least five snacks tucked into squirrel backpacks.
-
-                                The owl kicked off the day with, “The forest is awesome! Every animal’s got a job, even
-                                if
-                                it’s just not being eaten!” Lola soaked it all up like a sponge.
-
-                                By the end of the day, she had new friends, more stories, and a brain stuffed with
-                                forest
-                                facts. As she waddled home, Lola quacked to herself, “School’s awesome! Plus, no ropes,
-                                no
-                                porcupines, just snacks and naps. I could get used to this!”
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-            <!-- Congratulations with confetti -->
-            <section>
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col align-self-center">
-                            <h2>You finished the story, good job!</h2>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col align-self-center">
-                            <h2><em>Now that you have read Lolas story, let’s celebrate!!!</em></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-container text-center">
-                    <div class="col align-self-end">
-                        <div class=" row vertical-center">
-                            <button id="con-button" class="btn btn-warning btn-lg">*click me* <br> Let’s
-                                celebrate!! <br> *click me*</button> <canvas id="confetti"></canvas>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
 
     </main>
 
