add styling to the math page

--- a/math.html
+++ b/math.html
@@ -42,9 +42,11 @@
     </header>
     
     <main>
+        <section>
         <div id="hero-math">
-            <h1 id="hero-math-covertext">Math is everywhere!!</h1>
+            <h1 id="hero-math-covertext">Math is everywhere!</h1>
         </div>
+    </section>
     </main>
 
     <!-- footer -->
