--- a/english.html
+++ b/english.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- fontawesome and google -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- meta tags for search engines -->
     <meta name="description"
-        content="Oh no Lola. English learning platform for yound children to improve reading comprehension and vocabulary.">
-    <meta name="keywords" content="english learning, english crossword, fun story, online education">
+        content="Oh no Lola. Learning platform for yound children to improve reading comprehension and vocabulary and math skills.">
+    <meta name="keywords"
+        content="english learning, english crossword, fun story, online education, mathematics, learn math">
     <!-- title -->
     <title>Oh no Lola</title>
     <!-- favicon -->
@@ -50,8 +55,8 @@
 
         <section>
             <div id="intro">
-            <h2 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h2>
-        </div>
+                <h2 style="color: #3a3a3a; text-align: center;">Oh no <em>Lola</em> </h2>
+            </div>
         </section>
 
         <section>
@@ -362,15 +367,16 @@
             </li>
         </ul>
     </footer>
-        <!-- confetti npm script-->
-<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-<!-- javascript script -->
-<script src="assets/js/script.js"></script>
-<!-- bootstrap script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
-<!-- font awesome -->
-<script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
+    <!-- confetti npm script-->
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+    <!-- javascript script -->
+    <script src="assets/js/script.js"></script>
+    <!-- bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
 
-    </body>
+</body>
+</html>
