--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- fontawesome and google -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- meta tags for search engines -->
     <meta name="description"
-        content="Oh no Lola. English learning platform for yound children to improve reading comprehension and vocabulary.">
-    <meta name="keywords" content="english learning, english crossword, fun story, online education">
+        content="Oh no Lola. Learning platform for yound children to improve reading comprehension and vocabulary and math skills.">
+    <meta name="keywords"
+        content="english learning, english crossword, fun story, online education, mathematics, learn math">
     <!-- title -->
     <title>Oh no Lola</title>
     <!-- favicon -->
@@ -44,7 +49,7 @@
     <!-- main content -->
     <main>
         <div id="hero-main">
-                <h1 id="hero-main-covertext">Welcome to Bright Minds Academy!</h1>
+            <h1 id="hero-main-covertext">Welcome to Bright Minds Academy!</h1>
         </div>
 
         <section>
