--- a/math.html
+++ b/math.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- fontawesome and google -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- meta tags for search engines -->
     <meta name="description"
-        content="Oh no Lola. English learning platform for yound children to improve reading comprehension and vocabulary.">
-    <meta name="keywords" content="english learning, english crossword, fun story, online education">
+        content="Oh no Lola. Learning platform for yound children to improve reading comprehension and vocabulary and math skills.">
+    <meta name="keywords"
+        content="english learning, english crossword, fun story, online education, mathematics, learn math">
     <!-- title -->
     <title>Oh no Lola</title>
     <!-- favicon -->
@@ -40,13 +45,23 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <section>
-        <div id="hero-math">
-            <h1 id="hero-math-covertext">Math is everywhere!</h1>
-        </div>
-    </section>
+            <div id="hero-math">
+                <h1 id="hero-math-covertext" alt="math-hero-png">Math is everywhere!</h1>
+            </div>
+        </section>
+
+        <section>
+            <div class="game-are">
+
+            </div>
+            <div class="score-area">
+                <p class="scores">Correct! <span id="score">0</span></p>
+                <p class="scores">Oh no, try again! <span id="incorrect">0</span></p>
+
+            </div>
     </main>
 
     <!-- footer -->
@@ -65,6 +80,7 @@
             </li>
         </ul>
     </footer>
+
     <!-- confetti npm script-->
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <!-- javascript script -->
@@ -77,3 +93,4 @@
     <script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
 
 </body>
+</html>
