--- a/math.html
+++ b/math.html
@@ -59,16 +59,16 @@
                 </h2>
                 <div class="game-area">
                     <div class="controls-area">
-                        <button data-type="addition" class="btn btn-lg btn-success">
+                        <button id="math-btn" data-type="addition" class="btn btn-lg btn-success">
                             <i class="fa-solid fa-plus"></i>
                         </button>
-                        <button data-type="subtract" class="btn btn-lg btn-primary">
+                        <button id="math-btn" data-type="subtract" class="btn btn-lg btn-primary">
                             <i class="fa-solid fa-minus"></i>
                         </button>
-                        <button data-type="multiply" class="btn btn-lg btn-warning">
+                        <button id="math-btn" data-type="multiply" class="btn btn-lg btn-warning">
                             <i class="fa-solid fa-xmark"></i>
                         </button>
-                        <button data-type="division" class="btn btn-lg btn-danger">
+                        <button id="math-btn" data-type="division" class="btn btn-lg btn-danger">
                             <i class="fa-solid fa-divide"></i>
                         </button>
                     </div>
@@ -81,7 +81,7 @@
                         <p class="answer-message">Enter Answer:</p>
                         <input id="answer-box" type="number">
                     </div>
-                    <button data-type="submit" class="btn btn-secondary">Submit Answer</button>
+                    <button id="math-btn" data-type="submit" class="btn btn-secondary">Submit Answer</button>
                 </div>
                 <div class="score-area">
                     <p class="scores">Correct! <span id="score">0</span></p>
