--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
 
         <section>
             <div class="container text-center">
-                <div class="row row-cols-2">
-                    <div class="col-6-auto">
-                        <div class="card">
+                <div class="row row-col-2">
+                    <div class="col-12">
+                        <div id="homepage-card"  class="card">
                             <h5 class="card-header">English Reading</h5>
                             <div class="card-body-main">
                                 <h5 class="card-title">Oh no Lola</h5>
-                                <a href="english.html" class="btn btn-primary">Join Lola</a>
+                            <a href="english.html" id="link-pages" class="btn btn-success btn-sm">Join Lola</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6-auto">
-                        <div class="card">
+                    <div class="col-12">
+                        <div id="homepage-card" class="card">
                             <h5 class="card-header">Math Games</h5>
                             <div class="card-body-main">
                                 <h5 class="card-title">Magical Maths</h5>
-                                <a href="math.html" class="btn btn-primary">Let’s Play</a>
+                                <a href="math.html" id="link-pages" class="btn btn-warning btn-sm">Let’s Play</a>
                             </div>
                         </div>
                     </div>
