adjust styling on confetti message and effect, english page

--- a/english.html
+++ b/english.html
@@ -327,34 +327,17 @@
 
 
             <!-- Congratulations with confetti -->
-            <section>
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col align-self-center">
-                            <h2>You finished the story, good job!</h2>
-                        </div>
-                    </div>
+            <div class="card text-center">
+                <div class="card-body">
+                  <h5 class="card-title">HOOOORAY!!</h5>
+                  <p class="card-text">You finished the story, good job!</p>
+                  <button id="con-button" class="btn btn-warning">*click me* Let’s
+                    celebrate!!</button>
+                <canvas id="confetti"></canvas>
                 </div>
+              </div>
 
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col align-self-center">
-                            <h2><em>Now that you have read Lolas story, let’s celebrate!!!</em></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-container text-center">
-                    <div class="col align-self-end">
-                        <div class=" row vertical-center">
-                            <button id="con-button" class="btn btn-warning">*click me* Let’s
-                                celebrate!!</button>
-                            <canvas id="confetti"></canvas>
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-
+           
     </main>
 
     <!-- footer -->
